fix(Button): icon button vertical align (#7636)

--- a/src/button/index.less
+++ b/src/button/index.less
@@ -151,6 +151,12 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+
+    // fix icon vertical align
+    // see: https://github.com/youzan/vant/issues/7617
+    &::before {
+      content: ' ';
+    }
   }
 
   &__icon {
